                           Handle a pool we cannot read correctly: don't close
                             the NULL dir handle (segfaults on *bsd). We also
                             print a warning in that case now.

2003-02-15                 Add max capability for Type I.
                           Make sure DH/DSA param file is actually opened before
                             writing to it.  Fixes a segfault in case it is not.
                           Fix a problem in blockrequest() where a buffer
                             could have been used after it was free()d which
                             resulted in segfaults.
                           Install script tweaks
                           Check that feedback buffer is not null before
                             operating on it in chain_select().
                             Closes #631353, thanks Sami Farin.
                           In order to serve help files in different languages
                             we need a way to reply to requests like
                             remailer-help-it.  In order to not have to modify
                             the code for each and every new ressource, Mixmaster
                             now sends the file requests/remailer-<something> to
                             remailer-<something> requests.  remailer-{help,key,
                             stats,conf,adminkey} still are special cases tho.
                           In the curses interface chain selection it was not
                             possible to select a random last hop with a usenet
                             post message.  Fixed (closes: #719165).
                           If remix was enabled and we had a Type-I Anon-Post-To
                             request we accidently randhoped it via the configured
                             default remailing chain (default: *,*,*,*).
                             Fixed (closes: #729494).