@@ -379,3 +379,6 @@
                              request we accidently randhoped it via the configured
                              default remailing chain (default: *,*,*,*).
                              Fixed (closes: #729494).
+                           In client mode (REMAIL n) the pool is flushed every time
+                             mixmaster is run unless CLIENTAUTOFLUSH is set to n.
+                             (closes: #676794: Rate implementation doubled)
